# json_shapeshifter

./: .gitignore  README.md  advanced_example.py  benchmark.py  example.py  pyproject.toml
src/json_transformer/: __init__.py  cli.py  data_type_detector.py  error_handler.py  json_transformer.py  parser.py  profiler.py  streaming.py  types.py
src/json_transformer/engines/: __init__.py  file_sharding_engine.py  metadata_manager.py
src/json_transformer/io/: __init__.py  file_writer.py
src/json_transformer/models/: __init__.py  file_shard.py  global_metadata.py  shard_metadata.py
src/json_transformer/processors/: __init__.py  dict_processor.py  list_processor.py  mixed_processor.py
src/json_transformer/utils/: __init__.py  size_calculator.py  validation.py
tests/: __init__.py  conftest.py  test_data_type_detector.py  test_dict_processor.py  test_error_handler.py  test_file_sharding_engine.py  test_integration.py  test_list_processor.py  test_metadata_manager.py  test_mixed_processor.py  test_models.py  test_parser.py  test_size_calculator.py  test_validation.py
